--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Here I am going to build a file exchanging service (much like rghost) using Slim micro-framework for php. This is my first experienсe in creating serious web-applications on php. 
+Install: Create database, user and input the values in config.php.
