--- a/README
+++ b/README
@@ -1,2 +1,17 @@
 Here I am going to build a file exchanging service (much like rghost) using Slim micro-framework for php. This is my first experienсe in creating serious web-applications on php. 
 Install: Create database, user and input the values in config.php.
+
+В рамках этого учебного проекта я реализовал следующий функционал:
+- загрузка файлов на сервер
+- полоска индикатора процесса загрузки файла
+- страница скачивания, на которой выводится уменьшенная копия изображения( если файл jpg, png, gif),
+Для загрузившего этот файл пользователя возможность добавить текствое описание файла, кнопки скачать, удалить, править описание. 
+Для всех остальных только кнопка скачать.
+Подробная информация о файле, 
+Если аудиофайл - плеер, реализованный с помощью плагина jQery jPlayer,
+Древовидные комментарии пользователей.
+- Комментарии добавляются через ajax без перезагрузки страницы. Если javascript отключен, комментарии добавляются традиционным способом, с перезагрузкой
+- Полнотекстовый поиск по именам файлов и их описанию.
+- страница about
+- страница последние 100 файлов.
+- добавление файлов простым перетаскиванием на страницу ( с помощью возможностей HTML5 )
