--- a/README
+++ b/README
@@ -1,17 +1,23 @@
-Here I am going to build a file exchanging service (much like rghost) using Slim micro-framework for php. This is my first experienсe in creating serious web-applications on php. 
-Install: Create database, user and input the values in config.php.
+Download.me
+===========
+This is simplefile exchanging service (much like rghost). This is my first experienсe in building php5-powered web-applications. 
 
-В рамках этого учебного проекта я реализовал следующий функционал:
+Install (order of steps doesn't matter):
+1. create db & user and change config accordingly
+2. install dependencies with `composer install`
+
+Features :
+---------
+
 - загрузка файлов на сервер
 - полоска индикатора процесса загрузки файла
 - страница скачивания, на которой выводится уменьшенная копия изображения( если файл jpg, png, gif),
-Для загрузившего этот файл пользователя возможность добавить текствое описание файла, кнопки скачать, удалить, править описание. 
+- Для загрузившего этот файл пользователя возможность добавить текствое описание файла, кнопки скачать, удалить, править описание. 
 Для всех остальных только кнопка скачать.
-Подробная информация о файле, 
-Если аудиофайл - плеер, реализованный с помощью плагина jQery jPlayer,
-Древовидные комментарии пользователей.
-- Комментарии добавляются через ajax без перезагрузки страницы. Если javascript отключен, комментарии добавляются традиционным способом, с перезагрузкой
+- Подробная информация о файле, 
+- Если аудиофайл - плеер (jQuery jPlayer),
+- Древовидные комментарии пользователей.
 - Полнотекстовый поиск по именам файлов и их описанию.
 - страница about
 - страница последние 100 файлов.
-- добавление файлов простым перетаскиванием на страницу ( с помощью возможностей HTML5 )
+- добавление файлов простым перетаскиванием на страницу (HTML5 drag&drop API)
